fixed overflow on hover

--- a/frontend/src/app/components/tasque-team/tasque-team.component.sass
+++ b/frontend/src/app/components/tasque-team/tasque-team.component.sass
@@ -28,9 +28,11 @@
   align-items: center
   span
     align-self: center
-  > tasque-avatar 
+  > tasque-avatar
+    transform: scale(0.75)
+    transition: all 0.2s ease-in-out
     &:hover
-      transform: scale(1.5)
+      transform: scale(1)
 
 .text-wrp
   display: flex
